--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 target/
+metastore_db/
+derby.log
+project/project/
+src/main/java/
+src/main/resources/
+src/main/scala-2.11/
+src/main/scala-2.12/
+src/test/java/
+src/test/resources/
+src/test/scala-2.11/
+src/test/scala-2.12/
+stockhokder_meeting/
